--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,12 @@
     </div>
 
     <!-- MAIN CONTENT -->
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         {{ content }}
