--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 
     <!-- MAIN CONTENT -->
     <div class="topnav">
-      <a class="active" href="#home">Home</a>
+      <a class="active" href="https://aau-giraf.github.io/wiki/">Home</a>
       <a href="#news">News</a>
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
