--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,12 +32,19 @@
     </div>
 
     <!-- MAIN CONTENT -->
+    <style>
+    .topnav {
+      background-color: #333;
+      overflow: hidden;
+    }
+    <\style>
+      
     <div class="topnav">
       <a class="active" href="https://aau-giraf.github.io/wiki/">Home</a>
-      <a class="active" href="https://aau-giraf.github.io/wiki/releases/releases.html">GIRAF Releases</a>
+      <a href="https://aau-giraf.github.io/wiki/releases/releases.html">GIRAF Releases</a>
       <a href="https://aau-giraf.github.io/wiki/design_guide/design_guide.html">Design Guide</a>
-      <a class="active" href="https://aau-giraf.github.io/wiki/ServerAdministration/Server_Administration.html">Server adminstration</a>
-      <a class="active" href="https://aau-giraf.github.io/wiki/process_manual/process_manual.html">Process manual</a>
+      <a href="https://aau-giraf.github.io/wiki/ServerAdministration/Server_Administration.html">Server adminstration</a>
+      <a href="https://aau-giraf.github.io/wiki/process_manual/process_manual.html">Process manual</a>
       <a href="https://aau-giraf.github.io/wiki/REST_API_Development/Introduction.html">Rest API development</a>
     </div>
     <div id="main_content_wrap" class="outer">
